tooling/nargo_cli/tests/snapshots/execution_success/regression_8890/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field, v1: Field):
    (no terminator instruction)
}
[regression_8890] Circuit output: 0x05
